--- a/views/data_table.tt
+++ b/views/data_table.tt
@@ -1,24 +1,8 @@
-[% PROCESS snippets/rag_symbols.tt %]
-
-[% BLOCK rag_legend %]
-    <aside id="rag_legend" role="complementary">
-        <span>RAG symbol legend:</span>
-        <dl>
-        [% FOREACH rag_grade IN rag_grades %]
-            <dt class="rag">
-                <span class="[% rag_grade %]">[% rag_symbols.$rag_grade %]</span>
-            </dt>
-            <dd id="rag_[% rag_grade %]_meaning">[% rag_grade %]</dd>
-        [% END %]
-        </dl>
-    </aside>
-[% END %]
-
 [% FILTER collapse %]
 
 [% PROCESS snippets/datum.tt %]
 
-[% PROCESS rag_legend IF has_rag_column %]
+[% PROCESS snippets/rag_legend.tt IF has_rag_column %]
 
 <div class="hscroll row">
 <table class="data-table table table-striped col-md-12" id="data-table">
