--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1526,11 +1526,15 @@ small.search_term {
 
 .rag span {
   min-width: 1.5em;
+  min-height: 1.5em;
   display: inline-block;
   font-size: 1em;
   text-align: center;
   padding: 0 0.2em;
   border-bottom: 0.2em solid #000; }
+
+.file img {
+  display: block; }
 
 .rag .undefined {
   border-bottom-color: #a09fa0;
