--- a/sass/_data-table.scss
+++ b/sass/_data-table.scss
@@ -119,11 +119,16 @@
 
 .rag span {
     min-width: 1.5em;
+    min-height: 1.5em;
     display: inline-block;
     font-size: 1em;
     text-align: center;
     padding: 0 0.2em;
     border-bottom: 0.2em solid #000;
+}
+
+.file img {
+    display: block;
 }
 
 .rag .undefined {
