--- a/views/edit.tt
+++ b/views/edit.tt
@@ -1,3 +1,5 @@
+[% PROCESS snippets/datum.tt %]
+
 <h2>
     [% IF page == "bulk" %]
         [% IF bulk_type == "update" %]
@@ -24,6 +26,61 @@
 [% END %]
 <p></p>
 
+[% BLOCK panel_start %]
+    [% IF !col.topic OR col.topic.initial_state == 'open' %]
+        [% open = 1 %]
+    [% ELSE %]
+        [% open = 0 %]
+    [% END %]
+    <div class="panel-group" id="accordion[% col.id %]" role="tablist" aria-multiselectable="true">
+        <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingOne">
+                <h4 class="panel-title">
+                    <a role="button" data-toggle="collapse" data-parent="#accordion[% col.id %]"
+                        href="#topic[% col.id %]" aria-expanded="[% IF open %]true[% ELSE %]false[% END %]"
+                        aria-controls="topic[% col.id %]">
+                        [% col.topic.name OR 'Other' | html %]
+                    </a>
+                </h4>
+            </div>
+            <div id="topic[% col.id %]" class="panel-collapse collapse[% IF open %] in[% END %]" role="tabpanel" aria-labelledby="headingOne">
+                <div class="panel-body">
+                [% IF col.topic.click_to_edit %]
+                    [% click_to_edit = 1 %]
+                    <button class="btn btn-default pull-right click-to-edit" type="button" aria-expanded="false">Edit</button>
+                    <div id="topic_forms[% col.topic_id %]" class="expandable">
+                [% ELSE %]
+                    [% click_to_edit = 0 %]
+                [% END %]
+[% END %]
+[% BLOCK panel_end %]
+                [% IF click_to_edit %]
+                    </div>
+                    <div class="topic-click-to-edit-fields">
+                        <ul>
+                            [% FOREACH col_click IN click_to_edits %]
+                                <li><b>[% col_click.name | html %]:</b>
+                                    <span class="[% col_click.type %]">
+                                    [% render_datum(
+                                         col_click.presentation(
+                                           'datum_presentation', record.fields.${col_click.id}.presentation
+                                         ),
+                                         1 # show images
+                                       )
+                                    %]
+                                    </span>
+                                </li>
+                            [% END %]
+                        </ul>
+                    </div>
+                    [% click_to_edits = [] %]
+                [% END %]
+                </div>
+            </div>
+        </div>
+    </div>
+[% END %]
+
 <form id="edit-form" method="post" enctype="multipart/form-data">
     <div class="row">
         <div class="col-md-6">
@@ -37,8 +94,27 @@
             [% jscode = [] %]
             [% typeaheads = [] %]
             [% columns_done = {} %]
+            [% click_to_edits = [] %]
+
             [% FOREACH col IN all_columns %]
+                [% IF layout.has_topics %]
+                    [% IF col.topic.id != previous_topic %]
+                        [% IF in_panel %]
+                            [% PROCESS panel_end %]
+                            [% in_panel = 0 %]
+                        [% END %]
+                        [% PROCESS panel_start %]
+                        [% in_panel = 1 %]
+                    [% END %]
+                [% END %]
                 [% PROCESS do_col %]
+                [% IF click_to_edit %]
+                    [% click_to_edits.push(col) %]
+                [% END %]
+                [% previous_topic = col.topic.id %]
+            [% END %]
+            [% IF layout.has_topics %]
+                [% PROCESS panel_end %]
             [% END %]
         </div>
     </div>
