--- a/views/snippets/datum.tt
+++ b/views/snippets/datum.tt
@@ -65,6 +65,8 @@
     [% END %]
 [% END %]
 
+[% PROCESS snippets/rag_symbols.tt %]
+
 [% MACRO render_rag_datum(rag) BLOCK %]
     [% grade = rag.grade %]
     <span aria-labelledby="rag_[% grade %]_meaning" class="[% grade %]">[% rag_symbols.$grade %]</span>
