--- a/views/snippets/navigation.tt
+++ b/views/snippets/navigation.tt
@@ -141,10 +141,10 @@
                 <span class="caret"></span>
             </button>
             <ul class="dropdown-menu" id="table-menu">
-            [% FOREACH layout IN instances %]
-                <li [% IF layout.instance_id == instance_id %]class="active"[% END %]>
-                    <a href="?instance=[% layout.instance_id %]"
-                    >[% layout.name | html_entity %]</a>
+            [% FOREACH layout_menu IN instances %]
+                <li [% IF layout_menu.instance_id == instance_id %]class="active"[% END %]>
+                    <a href="?instance=[% layout_menu.instance_id %]"
+                    >[% layout_menu.name | html_entity %]</a>
                 </li>
             [% END %]
             </ul>
