Fix attempt to render non-images as images

--- a/views/snippets/datum.tt
+++ b/views/snippets/datum.tt
@@ -25,7 +25,7 @@
 [% MACRO render_file_datum(file, show_images) BLOCK %]
     [% IF file.id %]
         <a href="/file/[% file.id %]">
-            [% IF show_images %]
+            [% IF show_images AND file.mimetype.match('^image/') %]
                 <img class="autosize" src="/file/[% file.id %]">
             [% ELSE %]
                 [% file.name %]
