--- a/views/edit.tt
+++ b/views/edit.tt
@@ -45,6 +45,14 @@
             </div>
             <div id="topic[% col.id %]" class="panel-collapse collapse[% IF open %] in[% END %]" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
+                    [% IF col.topic.need_completed_topics_count %]
+                        <div role="alert" class="alert alert-info">
+                            Fields in this section cannot be completed until mandatory fields
+                            in the [% col.topic.need_completed_topics_as_string | html %]
+                            section[% IF col.topic.need_completed_topics_count > 1 %]s[% END %]
+                            have been completed.
+                        </div>
+                    [% END %]
                 [% IF col.topic.click_to_edit %]
                     [% click_to_edit = 1 %]
                     <button class="btn btn-default pull-right click-to-edit" type="button" aria-expanded="false">Edit</button>
