--- a/views/topic.tt
+++ b/views/topic.tt
@@ -23,6 +23,16 @@
                     <option value="1" [% IF topic.click_to_edit == 1 %]selected[% END %]>Initially read-only, click to edit</option>
                 </select>
             </div>
+            <div class="form-group">
+                <label for="prevent_edit_topic_id">Blank mandatory fields allowed, but they prevent editing of topic</label>
+                <select class="form-control" id="prevent_edit_topic_id" name="prevent_edit_topic_id">
+                    <option></option>
+                    [% FOREACH top IN topics %]
+                        [% NEXT IF topic.id == top.id %]
+                        <option value="[% top.id %]" [% IF topic.prevent_edit_topic_id == top.id %]selected[% END %]>[% top.name | html %]</option>
+                    [% END %]
+                </select>
+            </div>
         </div>
     </div>
     <button type="submit" id="submit" name="submit" value="submit" class="btn btn-primary">Save</button>
