--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1663,6 +1663,9 @@ small.search_term {
 #manage-fields.column-type-person .field-options.person {
   display: block; }
 
+#manage-fields.column-type-autocur .field-options.autocur {
+  display: block; }
+
 #manage-fields.column-type-rag #options .stored-value,
 #manage-fields.column-type-calc #options .stored-value {
   display: none; }
