--- a/views/view.tt
+++ b/views/view.tt
@@ -173,7 +173,7 @@
                 ' );
             });
         }); 
-        [% INCLUDE builder.tt filter_normal = view_edit.filter filter_base64 = view_edit.filter.base64 %]
+        [% INCLUDE builder.tt builder_layout = layout filter_normal = view_edit.filter filter_base64 = view_edit.filter.base64 %]
         [% IF view_edit.filter.as_json AND NOT view_edit.filter.as_json.match('^[{}\s]*$') %]
             var data = base64.decode('[% view_edit.filter.base64 %]');
             $('#builder').queryBuilder('setRules',
