--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -197,7 +197,7 @@
             <script src="[% scheme %]://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/tooltip.min.js"></script>
         [% END %]
         [% IF page.match('(edit|approval|audit|bulk|data)') %]
-            <script type="text/javascript" src="[% url.js %]/bootstrap-datepicker.js"></script>
+            <script type="text/javascript" src="[% url.js %]/bootstrap-datepicker.min.js"></script>
             <script type="text/javascript">
                 $(document).ready(function() {
                     $('.datepicker').datepicker({format: "[% config.dateformat_datepicker %]", autoclose: true});
