Fix missing field options when editing layout

--- a/views/layout.tt
+++ b/views/layout.tt
@@ -202,7 +202,7 @@
                     </div>
                     [% END %]
                 [% END %]
-            </ul>
+            </div>
             <div class="request-add">
                     <div class="">
                         <button type="button" class="btn btn-default add">
