--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1171,8 +1171,7 @@ a.list-group-item-danger.active, a.list-group-item-danger.active:hover, a.list-g
   margin-bottom: 21px; }
 
 .panel-group .panel {
-  border-radius: 0px;
-  overflow: hidden; }
+  border-radius: 0px; }
 
 .panel-primary {
   border-color: #1460aa; }
